[lworld] C2 compilation fails with "missed optimization opportunity"

XMLWordPrintable

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S13932/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/0d95c3b6-7f97-43db-a8b3-9f2fe274c9a1/runs/6e430950-69ff-469e-9c45-9138d1b69b09/workspace/open/src/hotspot/share/opto/compile.cpp:2776), pid=30645, tid=30659
      # assert(_late_inlines.length() == 0) failed: missed optimization opportunity
      #
      # JRE version: Java(TM) SE Runtime Environment (18.0+1) (fastdebug build 18-valhalla+1-85)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-valhalla+1-85, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xa522b9] Compile::Optimize()+0x1a69
      #
      # Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S13901/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/b96fd774-d9bb-4494-8451-3d8ab73333dd/runs/f245d3d2-3dd2-4bb2-b884-c0a2aea7e414/testoutput/test-support/jtreg_open_test_hotspot_jtreg_ctw_2/scratch/1/core.30645)
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #

      --------------- S U M M A R Y ------------

      Command Line: -XX:MaxRAMPercentage=4.16667 -Djava.io.tmpdir=/opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S13901/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/b96fd774-d9bb-4494-8451-3d8ab73333dd/runs/f245d3d2-3dd2-4bb2-b884-c0a2aea7e414/testoutput/test-support/jtreg_open_test_hotspot_jtreg_ctw_2/tmp -XX:+CreateCoredumpOnCrash -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -XX:+TieredCompilation -Djava.awt.headless=true -Xbatch -XX:-UseCounterDecay -XX:-ShowMessageBoxOnError -XX:+UnlockDiagnosticVMOptions -XX:+DisplayVMOutputToStderr -DCompileTheWorldStartAt=0 -DCompileTheWorldStopAt=2726 -XX:+WhiteBoxAPI -Xbootclasspath/a:. --add-exports=java.base/jdk.internal.jimage=ALL-UNNAMED --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED --add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED --add-exports=java.base/jdk.internal.access=ALL-UNNAMED -XX:+LogCompilation -XX:LogFile=hotspot_modules_java_desktop_0_%p.log -XX:ErrorFile=hs_err_modules_java_desktop_0_%p.log -XX:ReplayDataFile=replay_modules_java_desktop_0_%p.log -XX:CompileCommand=exclude,java/lang/invoke/MethodHandle.* -XX:+IgnoreUnrecognizedVMOptions -XX:+StressLCM -XX:+StressGCM -XX:+StressIGVN -XX:+StressCCP -XX:StressSeed=634263233994806140 sun.hotspot.tools.ctw.CompileTheWorld modules:java.desktop

      Host: ol7-x64-852056, AMD EPYC 7J13 64-Core Processor, 12 cores, 46G, Oracle Linux Server release 7.9
      Time: Mon Sep 13 21:05:33 2021 UTC elapsed time: 189.266300 seconds (0d 0h 3m 9s)

      --------------- T H R E A D ---------------

      Current thread (0x00007fc04432b9b0): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=30659, stack(0x00007fc028021000,0x00007fc028122000)]


      Current CompileTask:
      C2: 189266 80319 b 4 javax.swing.Spring$CompoundSpring::getPreferredValue (36 bytes)

      Stack: [0x00007fc028021000,0x00007fc028122000], sp=0x00007fc02811d410, free space=1009k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xa522b9] Compile::Optimize()+0x1a69
      V [libjvm.so+0xa53950] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, bool, DirectiveSet*)+0x1630
      V [libjvm.so+0x844670] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x6a0
      V [libjvm.so+0xa63ab1] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xd31
      V [libjvm.so+0xa647e8] CompileBroker::compiler_thread_loop()+0x598
      V [libjvm.so+0x196888c] JavaThread::thread_main_inner()+0x27c
      V [libjvm.so+0x196eeb0] Thread::call_run()+0x100
      V [libjvm.so+0x161fd74] thread_native_entry(Thread*)+0x104

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: