8273715: [lworld] C2 compilation fails with "missed optimization opportunity"